[gd_scene load_steps=14 format=3 uid="uid://db8keh0ab5xhf"]

[ext_resource type="PackedScene" uid="uid://cf57h23ilq1xh" path="res://scenes/enemy_base/enemy_base.tscn" id="1_hfmn7"]
[ext_resource type="Texture2D" uid="uid://dpk10kpa4ovbr" path="res://assets/boss/mage-wight.png" id="2_kvosf"]
[ext_resource type="Script" uid="uid://b6w8d34jatcxw" path="res://scenes/wight/mage_wight.gd" id="2_wxc7l"]

[sub_resource type="AtlasTexture" id="AtlasTexture_hfmn7"]
atlas = ExtResource("2_kvosf")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kvosf"]
atlas = ExtResource("2_kvosf")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wxc7l"]
atlas = ExtResource("2_kvosf")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ba11u"]
atlas = ExtResource("2_kvosf")
region = Rect2(64, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_616nv"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hfmn7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kvosf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hfmn7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kvosf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hfmn7")
}],
"loop": false,
"name": &"attack1",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hfmn7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kvosf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hfmn7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kvosf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hfmn7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kvosf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hfmn7")
}],
"loop": false,
"name": &"attack2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wxc7l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ba11u")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kvosf"]
size = Vector2(48, 56)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wxc7l"]
size = Vector2(48, 56)

[sub_resource type="Animation" id="Animation_kvosf"]
resource_name = "damaged"
length = 0.4
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0.12549), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_wxc7l"]
resource_name = "RESET"
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ba11u"]
_data = {
&"RESET": SubResource("Animation_wxc7l"),
&"damaged": SubResource("Animation_kvosf")
}

[node name="MageWight" instance=ExtResource("1_hfmn7")]
script = ExtResource("2_wxc7l")

[node name="AnimatedSprite2D" parent="." index="0"]
sprite_frames = SubResource("SpriteFrames_616nv")
animation = &"attack2"
autoplay = "walk"
frame = 6
frame_progress = 1.0

[node name="CollisionShape2D" parent="." index="1"]
position = Vector2(0, 4)
shape = SubResource("RectangleShape2D_kvosf")

[node name="HitBox" parent="." index="2"]
collision_layer = 0

[node name="CollisionShape2D" parent="HitBox" index="0"]
position = Vector2(0, 4)
shape = SubResource("RectangleShape2D_wxc7l")

[node name="AttackTimer" type="Timer" parent="." index="4"]
wait_time = 10.0
one_shot = true
autostart = true

[node name="FloorDetection" type="RayCast2D" parent="." index="5"]
position = Vector2(16, 24)
target_position = Vector2(0, 16)

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="6"]
libraries = {
&"": SubResource("AnimationLibrary_ba11u")
}

[node name="InvincibleTimer" type="Timer" parent="." index="7"]
wait_time = 3.0
one_shot = true

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="." index="8"]
position = Vector2(-4.76837e-07, 4)
scale = Vector2(2.4, 2.8)

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="area_entered" from="HitBox" to="." method="on_hit_box_entered"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
[connection signal="timeout" from="InvincibleTimer" to="." method="_on_invincible_timer_timeout"]
[connection signal="screen_entered" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_entered"]
